--- a/DilkashDBMS/Views/Shared/_Layout.cshtml
+++ b/DilkashDBMS/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Food" asp-action="Index">Food</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Food" asp-action="Filter">Filter</a>
+                        </li>
                     </ul>
                 </div>
             </div>
