--- a/DilkashDBMS/Views/Food/Create.cshtml
+++ b/DilkashDBMS/Views/Food/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="FoodName" class="control-label"></label>
@@ -23,9 +23,9 @@
                 <span asp-validation-for="FoodDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FoodImage" class="control-label"></label>
-                <input type="file" asp-for="FoodImage" class="form-control" />
-                <span asp-validation-for="FoodImage" class="text-danger"></span>
+                <label asp-for="ImageFile" class="control-label"></label>
+                <input type="file" asp-for="ImageFile" class="form-control" />
+                <span asp-validation-for="ImageFile" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FoodType" class="control-label"></label>
